--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -14,6 +14,20 @@ body {
     line-height: 1.8;
 }
 
+.centered-form {
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-group {
+    label {
+        display: block;
+        text-transform: capitalize;
+    }
+}
 .navbar {
     background-color: lightblue;  
     display: flex; 
